Fix - class name and styles for alignment using the Basic Block

--- a/web/themes/custom/hm-public-theme/static/sass/content/_content.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/content/_content.scss
@@ -1,7 +1,7 @@
 // Generic content styles
 
 // Basic Block Content
-.wrapper .body {
+.wrapper .basic-block {
   @extend %max-width;
   margin-bottom: em(50);
   margin-top: em(60);
@@ -14,8 +14,6 @@
 }
 
 hr {
-  margin-left: $default-grid-gutter-width;
-  margin-right: $default-grid-gutter-width;
   margin-top: em(60);
 }
 
